--- a/box.html
+++ b/box.html
@@ -10,19 +10,27 @@
 	</style>
 </head>
 <body>
+
+<div class="main">
 <div class="box1">
 
 </div>
 
-<div style="width:500px; height:500px; background:#000; position:relative;">
+
     <div class="box2">
 
     </div>
-</div>
+
 <div class="box3">
 
 </div>
+</div>
+<div>adf</div>
 
+<a href="#">链接1</a><br>
+<a href="#">链接2</a><br>
+<a href="#">链接3</a><br>
+<a href="#">链接4</a><br>
 </body>
 <script type="text/javascript">
 $(".box1").click(function(){
