--- a/box.html
+++ b/box.html
@@ -5,45 +5,24 @@
 	<meta http-equiv="content-type" content="text/html" charset="utf-8">
 	<script type="text/javascript" src="js/jquery-1.10.2.js"></script>
 	<style type="text/css">
-	html{
-	}
+	
 	</style>
 </head>
 <body>
 
-<div class="main">
-<div class="box1">
 
+
+<div class="box1">1
+	<div class="box2">2
+		<div class="box3">3
+		</div>
+	</div>
 </div>
 
 
-    <div class="box2">
 
-    </div>
 
-<div class="box3">
 
-</div>
-</div>
-<div>adf</div>
-
-<a href="#">链接1</a><br>
-<a href="#">链接2</a><br>
-<a href="#">链接3</a><br>
-<a href="#">链接4</a><br>
 </body>
-<script type="text/javascript">
-$(".box1").click(function(){
-	alert($.MaxNum(12,100));
-});
 
-
-$(function(){
-		$.extend({
-            "MaxNum":function(num1,num2){
-            return (num1>num2)? num1 : num2; 
-            }
-        });
-});
-</script>
 </html>
