--- a/Training/cssindex.html
+++ b/Training/cssindex.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cn">
 <head>
 	<meta charset="utf-8">
@@ -46,11 +46,11 @@
 
 	<div class="page-container">
 
-		<div class="sidebar-menu fixed">	
+		<div class="sidebar-menu">	
 			<div class="sidebar-menu-inner">	
 				<header class="logo-env">	
 					<div class="logo">
-						<h1 style="color:#fff">前端基础知识</h1>
+						<h3 style="color:#fff">前端基础知识</h3>
 					</div>					
 				</header>
 						
